--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,4 +1,5 @@
 apply plugin: 'com.android.application'
+apply plugin: 'android-apt'
 
 android {
     compileSdkVersion 24
@@ -28,6 +29,8 @@ dependencies {
     compile('com.codepath.libraries:android-oauth-handler:1.0.0@aar') {
         transitive = true
     }
+    apt 'com.jakewharton:butterknife-compiler:8.2.1'
+
     compile 'com.android.support:appcompat-v7:24.0.0'
     // Picasso for remote image loading
     compile 'com.squareup.picasso:picasso:2.5.2'
@@ -35,4 +38,6 @@ dependencies {
     compile 'com.loopj.android:android-async-http:1.4.9'
     // ActiveAndroid for simple persistence with an ORM
     compile 'com.michaelpardo:activeandroid:3.1.0-SNAPSHOT'
+    compile 'com.android.support:recyclerview-v7:24.0.0'
+    compile 'com.jakewharton:butterknife:8.2.1'
 }
