--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,13 +31,15 @@ dependencies {
     }
     apt 'com.jakewharton:butterknife-compiler:8.2.1'
 
-    compile 'com.android.support:appcompat-v7:24.0.0'
     // Picasso for remote image loading
-    compile 'com.squareup.picasso:picasso:2.5.2'
     // Android Async Http for sending async network requests
-    compile 'com.loopj.android:android-async-http:1.4.9'
     // ActiveAndroid for simple persistence with an ORM
+    compile 'com.android.support:appcompat-v7:24.0.0'
+    compile 'com.squareup.picasso:picasso:2.5.2'
+    compile 'com.loopj.android:android-async-http:1.4.9'
     compile 'com.michaelpardo:activeandroid:3.1.0-SNAPSHOT'
     compile 'com.android.support:recyclerview-v7:24.0.0'
     compile 'com.jakewharton:butterknife:8.2.1'
+    compile 'com.github.bumptech.glide:glide:3.5.2'
+    compile 'com.android.support:support-v4:24.0.0'
 }
