detail screen + misc cleanup (SC 8/12/2016)

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -48,7 +48,8 @@
             </intent-filter>
         </activity>
         <activity android:name=".Activities.TimelineActivity" />
-        <activity android:name=".Activities.ProfileActivity"></activity>
+        <activity android:name=".Activities.ProfileActivity" />
+        <activity android:name=".Activities.DetailActivity" />
     </application>
 
 </manifest>
