--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,5 +1,6 @@
 apply plugin: 'com.android.application'
 apply plugin: 'android-apt'
+apply plugin: 'com.neenbedankt.android-apt'
 
 android {
     compileSdkVersion 24
@@ -30,6 +31,8 @@ dependencies {
         transitive = true
     }
     apt 'com.jakewharton:butterknife-compiler:8.2.1'
+    compile 'org.parceler:parceler-api:1.1.1'
+    apt 'org.parceler:parceler:1.1.1'
 
     // Picasso for remote image loading
     // Android Async Http for sending async network requests
@@ -45,4 +48,5 @@ dependencies {
     compile 'com.facebook.stetho:stetho:1.3.1'
     compile 'com.facebook.stetho:stetho-okhttp3:1.3.1'
     compile 'com.astuetz:pagerslidingtabstrip:1.0.1'
+
 }
